--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 
 <div id="main" class="container">
   <h1>Eternal Brothers FC</h1>
+  <h3 style="margin-top:0;">Eternal Brothers</h3>
+  <p style="margin:5px 0; font-weight:bold;">The game will be at 9:40 AM</p>
+
+  <!-- عنوان اللعبة -->
+  <p id="addressDisplay" style="margin:5px 0; font-weight:bold; cursor:pointer;">Click here to set match address</p>
+
   <h2>Add Player</h2>
   <input type="text" id="nameInput" placeholder="Enter player name">
   <button onclick="addPlayer()">Add</button>
@@ -101,6 +107,10 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 
   <h2>Waiting List</h2>
   <ul id="waitingList"></ul>
+
+  <p style="margin-top:15px; font-size:12px; color:#ccc;">
+    We might need to change the football field at any time. Please follow the group chat in case of any changes
+  </p>
 </div>
 
 <div id="blue" class="container" style="background:#1565c0aa;">
@@ -134,35 +144,28 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseUrl = "https://wihhlvgkjglphjzhivdn.supabase.co";
-
-// API Key و Project Role
 const supabaseServiceKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
-
 const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
 const playerPositions = { blue: {}, yellow: {} };
 const nameColors = ["#e53935", "#1e88e5", "#fbc02d","#43a047","#8e24aa","#fb8c00","#00acc1","#d81b60","#6d4c41","#3949ab","#f4511e","#7cb342"];
 
-// Navigation
 function showSection(id){
   document.querySelectorAll('.container').forEach(c=>c.style.display='none');
   document.getElementById(id).style.display='block';
 }
 showSection('main');
 
-// تحقق من الوقت (من الأربعاء 3 ظهرًا حتى الأحد 12 ظهرًا)
 function isWithinAllowedTime(){
   const now = new Date();
-  const day = now.getDay(); // 0=Sunday, 1=Monday, ..., 6=Saturday
+  const day = now.getDay();
   const hour = now.getHours();
-
-  if(day===3 && hour>=15) return true; // الأربعاء بعد 3 ظهرًا
-  if(day===4 || day===5 || day===6) return true; // الخميس، الجمعة، السبت
-  if(day===0 && hour<12) return true; // الأحد قبل 12 ظهرًا
+  if(day===3 && hour>=15) return true;
+  if(day===4 || day===5 || day===6) return true;
+  if(day===0 && hour<12) return true;
   return false;
 }
 
-// Main team
 async function addPlayer(){
   if(!isWithinAllowedTime()){
     return alert("Adding players is only allowed from Wednesday 3 PM to Sunday 12 PM.");
@@ -212,7 +215,6 @@ async function refillMainTeam(){
   loadPlayers();
 }
 
-// Draggable markers
 function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) {
   const fieldId = team === 'blue' ? 'bluePlan' : 'yellowPlan';
   const field = document.getElementById(fieldId);
@@ -288,7 +290,6 @@ function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) 
   field.appendChild(marker);
 }
 
-// Blue team
 async function addBlue(){
   const name=document.getElementById("blueInput").value.trim();
   if(!name) return;
@@ -311,7 +312,6 @@ async function loadBlue(){
   });
 }
 
-// Yellow team
 async function addYellow(){
   const name=document.getElementById("yellowInput").value.trim();
   if(!name) return;
@@ -334,7 +334,6 @@ async function loadYellow(){
   });
 }
 
-// Edit & Delete
 async function deletePlayer(table,id){
   if(!confirm("Are you sure you want to delete this player?")) return;
   await supabase.from(table).delete().eq("id",id);
@@ -352,6 +351,56 @@ function reloadList(table){
   else if(table==="blue_team") loadBlue();
   else if(table==="yellow_team") loadYellow();
 }
+
+// التعامل مع العنوان بالنقر مرتين لتحريره وتحويله لرابط عند حفظه
+const addressDisplayElem = document.getElementById('addressDisplay');
+const savedAddress = localStorage.getItem('matchAddress');
+if(savedAddress){
+  addressDisplayElem.innerHTML = `<a href="${savedAddress}" target="_blank" style="color:#fff; text-decoration:underline;">${savedAddress}</a>`;
+}
+
+addressDisplayElem.addEventListener('dblclick', () => {
+  const currentText = addressDisplayElem.textContent.includes("Click here") ? "" : addressDisplayElem.textContent;
+  const input = document.createElement('input');
+  input.type = 'text';
+  input.value = currentText;
+  input.style.width = "80%";
+  input.style.padding = "5px";
+  input.style.borderRadius = "8px";
+  input.style.border = "1px solid #555";
+  input.style.background = "#2c2c2c";
+  input.style.color = "#fff";
+  input.style.textAlign = "center";
+
+  addressDisplayElem.replaceWith(input);
+  input.focus();
+
+  const saveAddress = () => {
+    const val = input.value.trim();
+    const p = document.createElement('p');
+    p.id = "addressDisplay";
+    p.style.cursor = "pointer";
+    p.style.margin = "5px 0";
+    p.style.fontWeight = "bold";
+
+    if(val === ""){
+      p.textContent = "Click here to set match address";
+      localStorage.removeItem('matchAddress');
+    } else {
+      p.innerHTML = `<a href="${val}" target="_blank" style="color:#fff; text-decoration:underline;">${val}</a>`;
+      localStorage.setItem('matchAddress', val);
+    }
+
+    input.replaceWith(p);
+    p.addEventListener('dblclick', () => {
+      p.replaceWith(input);
+      input.focus();
+    });
+  };
+
+  input.addEventListener('blur', saveAddress);
+  input.addEventListener('keypress', e => { if(e.key === 'Enter') saveAddress(); });
+});
 
 // Load all
 loadPlayers(); loadBlue(); loadYellow();
