--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <h2>Waiting List</h2>
   <ul id="waitingList"></ul>
 
+  <!-- بالون الرسالة بعد حذف لاعب من Main Team -->
+  <div id="mainListMessage" 
+       style="display:none; 
+              background:#ff3b3b; 
+              color:white; 
+              padding:10px; 
+              margin-top:10px; 
+              border-radius:8px; 
+              font-weight:bold;">
+  </div>
+
   <p style="margin-top:15px; font-size:12px; color:#ccc;">
     We might need to change the football field at any time. Please follow the group chat in case of any changes
   </p>
@@ -336,10 +347,25 @@ async function loadYellow(){
 
 async function deletePlayer(table,id){
   if(!confirm("Are you sure you want to delete this player?")) return;
+  
+  // جلب اسم اللاعب قبل الحذف
+  const { data: playerData } = await supabase.from(table).select("name").eq("id", id).single();
+
   await supabase.from(table).delete().eq("id",id);
-  if(table==="main_team") await refillMainTeam();
+
+  if(table==="main_team") {
+    await refillMainTeam();
+    // عرض البالون الأحمر
+    const msgDiv = document.getElementById("mainListMessage");
+    if(playerData){
+      msgDiv.textContent = `The player (${playerData.name}) has left the main list`;
+      msgDiv.style.display = "block";
+    }
+  }
+
   reloadList(table);
 }
+
 async function editPlayer(table,id,oldName){
   const newName=prompt("Edit name:", oldName);
   if(!newName || newName.trim()==="") return;
