--- a/index1.html
+++ b/index1.html
@@ -60,26 +60,39 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 .delete-btn { background:#e53935; color:#fff; }
 
 .player-marker { width:35px; height:35px; border-radius:50%; color:#fff; display:flex; align-items:center; justify-content:center; font-size:14px; font-weight:bold; position:absolute; cursor:grab; user-select:none; }
-/* الاسم فوق الدائرة أفقي */
 .player-name {
   position: absolute;
-  top: -18px;   /* فوق الدائرة */
+  top: -18px;  
   left: 50%;    
   transform: translateX(-50%);
   font-size: 12px;
-  color: black; /* اللون أسود */
+  color: black;
   white-space: nowrap;
   font-weight: bold;
 }
 
 .field { width:100%; max-width:400px; height:250px; background:#4CAF50; margin:10px auto; border:2px solid #fff; border-radius:10px; position:relative; touch-action:none; }
-/* خطوط الملعب */
 .field .center-circle { position:absolute; width:50px;height:50px;border-radius:50%;border:2px solid #fff; top:50%; left:50%; transform:translate(-50%,-50%); }
 .field .penalty-box-left, .field .penalty-box-right { position:absolute;width:60px;height:120px;border:2px solid #fff; top:50%; transform:translateY(-50%); }
 .field .penalty-box-left { left:0; }
 .field .penalty-box-right { right:0; }
 .field .mid-line { position:absolute; width:0;height:100%;border-left:2px solid #fff; top:0; left:50%; transform:translateX(-50%); }
 
+#mainListMessageContainer {
+  margin-top:10px;
+  text-align:center;
+}
+.leave-message {
+  display:block;
+  padding:5px 10px;
+  margin:3px 0;
+  border-radius:5px;
+  font-weight:bold;
+  font-size:12px;
+  color:white;
+}
+.leave-red { background:#ff3b3b; }
+.leave-green { background:#4caf50; }
 </style>
 </head>
 <body>
@@ -95,7 +108,6 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <h3 style="margin-top:0;">Eternal Brothers</h3>
   <p style="margin:5px 0; font-weight:bold;">The game will be at 9:40 AM</p>
 
-  <!-- عنوان اللعبة -->
   <p id="addressDisplay" style="margin:5px 0; font-weight:bold; cursor:pointer;">Click here to set match address</p>
 
   <h2>Add Player</h2>
@@ -108,16 +120,7 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
   <h2>Waiting List</h2>
   <ul id="waitingList"></ul>
 
-  <!-- بالون الرسالة بعد حذف لاعب من Main Team -->
-  <div id="mainListMessage" 
-       style="display:none; 
-              background:#ff3b3b; 
-              color:white; 
-              padding:10px; 
-              margin-top:10px; 
-              border-radius:8px; 
-              font-weight:bold;">
-  </div>
+  <div id="mainListMessageContainer"></div>
 
   <p style="margin-top:15px; font-size:12px; color:#ccc;">
     We might need to change the football field at any time. Please follow the group chat in case of any changes
@@ -159,7 +162,6 @@ const supabaseServiceKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXB
 const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
 const playerPositions = { blue: {}, yellow: {} };
-const nameColors = ["#e53935", "#1e88e5", "#fbc02d","#43a047","#8e24aa","#fb8c00","#00acc1","#d81b60","#6d4c41","#3949ab","#f4511e","#7cb342"];
 
 function showSection(id){
   document.querySelectorAll('.container').forEach(c=>c.style.display='none');
@@ -167,33 +169,36 @@ function showSection(id){
 }
 showSection('main');
 
-function isWithinAllowedTime(){
-  const now = new Date();
-  const day = now.getDay();
-  const hour = now.getHours();
-  if(day===3 && hour>=15) return true;
-  if(day===4 || day===5 || day===6) return true;
-  if(day===0 && hour<12) return true;
-  return false;
-}
-
+// Main Team & Waiting List
 async function addPlayer(){
-  if(!isWithinAllowedTime()){
-    return alert("Adding players is only allowed from Wednesday 3 PM to Sunday 12 PM.");
-  }
   const name = document.getElementById("nameInput").value.trim();
   if(!name) return alert("Enter a name");
   const { data: team } = await supabase.from("main_team").select("id");
+  let addedToMain = false;
+
   if(team.length < 24){
-    const { error } = await supabase.from("main_team").insert([{name,time:Date.now()}]);
-    if(error) return alert(error.message);
+    await supabase.from("main_team").insert([{name,time:Date.now()}]);
+    addedToMain = true;
   } else {
-    const { error } = await supabase.from("waiting_list").insert([{name,time:Date.now()}]);
-    if(error) return alert(error.message);
+    await supabase.from("waiting_list").insert([{name,time:Date.now()}]);
     alert("Main team is full (24). Player added to waiting list.");
   }
+
   document.getElementById("nameInput").value="";
   loadPlayers();
+
+  // إذا أضيف إلى Main Team، بالون أخضر في الأعلى
+  if(addedToMain){
+    const leaveContainer = document.getElementById("mainListMessageContainer");
+    const msg = document.createElement("div");
+    msg.className = "leave-message leave-green";
+    msg.textContent = `The player (${name}) has joined the main list`;
+    leaveContainer.insertBefore(msg, leaveContainer.firstChild);
+
+    let joinList = JSON.parse(localStorage.getItem("joinList") || "[]");
+    joinList.unshift(name);
+    localStorage.setItem("joinList", JSON.stringify(joinList));
+  }
 }
 
 async function loadPlayers(){
@@ -213,94 +218,62 @@ async function loadPlayers(){
       <button class="action-btn edit-btn" onclick="editPlayer('waiting_list',${p.id},'${p.name}')">✏️</button>
       <button class="action-btn delete-btn" onclick="deletePlayer('waiting_list',${p.id})">🗑️</button>
     </span></li>`);
+
+  const leaveContainer = document.getElementById("mainListMessageContainer");
+  leaveContainer.innerHTML = "";
+
+  // لاعبين غادروا (أحمر)
+  let leaveList = JSON.parse(localStorage.getItem("leaveList") || "[]");
+  leaveList.forEach(name=>{
+    const msg = document.createElement("div");
+    msg.className = "leave-message leave-red";
+    msg.textContent = `The player (${name}) has left the main list`;
+    leaveContainer.appendChild(msg);
+  });
+
+  // لاعبين انضموا (أخضر)
+  let joinList = JSON.parse(localStorage.getItem("joinList") || "[]");
+  joinList.forEach(name=>{
+    const msg = document.createElement("div");
+    msg.className = "leave-message leave-green";
+    msg.textContent = `The player (${name}) has joined the main list`;
+    leaveContainer.insertBefore(msg, leaveContainer.firstChild);
+  });
 }
 
-async function refillMainTeam(){
-  const { data: team } = await supabase.from("main_team").select("id");
-  const { data: waiting } = await supabase.from("waiting_list").select("*").order("id");
-  if(team.length < 24 && waiting.length > 0){
-    const first = waiting[0];
-    await supabase.from("main_team").insert([{ name:first.name, time:Date.now() }]);
-    await supabase.from("waiting_list").delete().eq("id", first.id);
+async function deletePlayer(table,id){
+  if(!confirm("Are you sure you want to delete this player?")) return;
+  const { data: playerData } = await supabase.from(table).select("name").eq("id", id).single();
+  await supabase.from(table).delete().eq("id",id);
+
+  if(table==="main_team" && playerData){
+    const leaveContainer = document.getElementById("mainListMessageContainer");
+    const msg = document.createElement("div");
+    msg.className = "leave-message leave-red";
+    msg.textContent = `The player (${playerData.name}) has left the main list`;
+    leaveContainer.insertBefore(msg, leaveContainer.firstChild);
+
+    let leaveList = JSON.parse(localStorage.getItem("leaveList") || "[]");
+    leaveList.unshift(playerData.name);
+    localStorage.setItem("leaveList", JSON.stringify(leaveList));
   }
-  loadPlayers();
+  reloadList(table);
 }
 
-function createPlayerMarker(team, playerName, playerIndex, storedPosition=null) {
-  const fieldId = team === 'blue' ? 'bluePlan' : 'yellowPlan';
-  const field = document.getElementById(fieldId);
-
-  const marker = document.createElement('div');
-  marker.classList.add('player-marker');
-  marker.style.background = team==='blue'? '#1976d2' : '#fbc02d';
-  marker.innerText = playerIndex;
-
-  if(storedPosition){
-    marker.style.left = storedPosition.left;
-    marker.style.top = storedPosition.top;
-  } else {
-    marker.style.left = '10px';
-    marker.style.top = `${30 + playerIndex * 30}px`;
-  }
-
-  const label = document.createElement('div');
-  label.classList.add('player-name');
-  label.innerText = playerName;
-  label.style.color = 'black';
-  marker.appendChild(label);
-
-  let isDragging=false, offsetX, offsetY;
-
-  function startDrag(e){
-    isDragging=true;
-    const rect=marker.getBoundingClientRect();
-    if(e.type.startsWith('touch')){
-      const touch=e.touches[0];
-      offsetX=touch.clientX - rect.left;
-      offsetY=touch.clientY - rect.top;
-    } else {
-      offsetX=e.offsetX;
-      offsetY=e.offsetY;
-    }
-  }
-
-  function moveDrag(e){
-    if(!isDragging) return;
-    const rect=field.getBoundingClientRect();
-    let clientX, clientY;
-    if(e.type.startsWith('touch')){
-      const touch=e.touches[0];
-      clientX=touch.clientX;
-      clientY=touch.clientY;
-    } else {
-      clientX=e.clientX;
-      clientY=e.clientY;
-    }
-    marker.style.left = `${clientX - rect.left - offsetX}px`;
-    marker.style.top = `${clientY - rect.top - offsetY}px`;
-  }
-
-  async function endDrag(){
-    if(!isDragging) return;
-    isDragging=false;
-    playerPositions[team][playerName] = { left: marker.style.left, top: marker.style.top };
-    const table = team==='blue' ? 'blue_team' : 'yellow_team';
-    const { data: player } = await supabase.from(table).select('id').eq('name',playerName).limit(1);
-    if(player.length>0){
-      await supabase.from(table).update({position: JSON.stringify(playerPositions[team][playerName])}).eq('id', player[0].id);
-    }
-  }
-
-  marker.addEventListener('mousedown', startDrag);
-  marker.addEventListener('touchstart', startDrag);
-  document.addEventListener('mousemove', moveDrag);
-  document.addEventListener('touchmove', moveDrag);
-  document.addEventListener('mouseup', endDrag);
-  document.addEventListener('touchend', endDrag);
-
-  field.appendChild(marker);
+async function editPlayer(table,id,oldName){
+  const newName = prompt("Edit name:", oldName);
+  if(!newName || newName.trim()==="") return;
+  await supabase.from(table).update({name:newName.trim()}).eq("id",id);
+  reloadList(table);
 }
 
+function reloadList(table){
+  if(table==="main_team" || table==="waiting_list") loadPlayers();
+  else if(table==="blue_team") loadBlue();
+  else if(table==="yellow_team") loadYellow();
+}
+
+// Blue Team
 async function addBlue(){
   const name=document.getElementById("blueInput").value.trim();
   if(!name) return;
@@ -318,11 +291,10 @@ async function loadBlue(){
   ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
   if(data) data.forEach((p,i)=>{
     ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('blue_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('blue_team',${p.id})">🗑️</button></span></li>`;
-    let pos = p.position ? JSON.parse(p.position) : null;
-    createPlayerMarker('blue', p.name, i+1, pos);
   });
 }
 
+// Yellow Team
 async function addYellow(){
   const name=document.getElementById("yellowInput").value.trim();
   if(!name) return;
@@ -340,61 +312,15 @@ async function loadYellow(){
   ul.innerHTML=""; field.innerHTML=`<div class="mid-line"></div><div class="center-circle"></div><div class="penalty-box-left"></div><div class="penalty-box-right"></div>`;
   if(data) data.forEach((p,i)=>{
     ul.innerHTML+=`<li>${i+1}. ${p.name}<span><button class="action-btn edit-btn" onclick="editPlayer('yellow_team',${p.id},'${p.name}')">✏️</button><button class="action-btn delete-btn" onclick="deletePlayer('yellow_team',${p.id})">🗑️</button></span></li>`;
-    let pos = p.position ? JSON.parse(p.position) : null;
-    createPlayerMarker('yellow', p.name, i+1, pos);
   });
 }
 
-async function deletePlayer(table,id){
-  if(!confirm("Are you sure you want to delete this player?")) return;
-  
-  // جلب اسم اللاعب قبل الحذف
-  const { data: playerData } = await supabase.from(table).select("name").eq("id", id).single();
-
-  await supabase.from(table).delete().eq("id",id);
-
-  if(table==="main_team") {
-    await refillMainTeam();
-    // عرض البالون الأحمر وحفظه في localStorage
-    const msgDiv = document.getElementById("mainListMessage");
-    if(playerData){
-      msgDiv.textContent = `The player (${playerData.name}) has left the main list`;
-      msgDiv.style.display = "block";
-      localStorage.setItem("lastLeftPlayer", playerData.name);
-    }
-  }
-
-  reloadList(table);
-}
-
-async function editPlayer(table,id,oldName){
-  const newName=prompt("Edit name:", oldName);
-  if(!newName || newName.trim()==="") return;
-  await supabase.from(table).update({name:newName.trim()}).eq("id",id);
-  reloadList(table);
-}
-
-function reloadList(table){
-  if(table==="main_team" || table==="waiting_list") loadPlayers();
-  else if(table==="blue_team") loadBlue();
-  else if(table==="yellow_team") loadYellow();
-}
-
-// التعامل مع العنوان بالنقر مرتين لتحريره وحفظه كنص
-let addressDisplayElem = document.getElementById('addressDisplay');
+// التعامل مع العنوان
+const addressDisplayElem = document.getElementById('addressDisplay');
 const savedAddress = localStorage.getItem('matchAddress');
 if(savedAddress){
   addressDisplayElem.textContent = savedAddress;
 }
-
-// عند تحميل الصفحة، إعادة عرض البالون الأحمر إذا كان موجودًا
-const lastLeft = localStorage.getItem("lastLeftPlayer");
-if(lastLeft){
-  const msgDiv = document.getElementById("mainListMessage");
-  msgDiv.textContent = `The player (${lastLeft}) has left the main list`;
-  msgDiv.style.display = "block";
-}
-
 addressDisplayElem.addEventListener('dblclick', () => {
   const currentText = addressDisplayElem.textContent.includes("Click here") ? "" : addressDisplayElem.textContent;
   const input = document.createElement('input');
@@ -407,10 +333,8 @@ addressDisplayElem.addEventListener('dblclick', () => {
   input.style.background = "#2c2c2c";
   input.style.color = "#fff";
   input.style.textAlign = "center";
-
   addressDisplayElem.replaceWith(input);
   input.focus();
-
   const saveAddress = () => {
     const val = input.value.trim();
     const p = document.createElement('p');
@@ -418,33 +342,28 @@ addressDisplayElem.addEventListener('dblclick', () => {
     p.style.cursor = "pointer";
     p.style.margin = "5px 0";
     p.style.fontWeight = "bold";
-    p.style.color = "#fff"; // لون النص الأبيض
-
+    p.style.color = "#fff";
     if(val === ""){
       p.textContent = "Click here to set match address";
       localStorage.removeItem('matchAddress');
     } else {
-      p.textContent = val; // حفظ كنص فقط
+      p.textContent = val;
       localStorage.setItem('matchAddress', val);
     }
-
     input.replaceWith(p);
-
-    // إعادة تعيين الحدث للنقر المزدوج
     p.addEventListener('dblclick', () => {
       addressDisplayElem = p;
       addressDisplayElem.dispatchEvent(new Event('dblclick'));
     });
   };
-
   input.addEventListener('blur', saveAddress);
   input.addEventListener('keydown', (e) => { if(e.key==='Enter') saveAddress(); });
 });
 
+// تحميل كل شيء عند البداية
 loadPlayers();
 loadBlue();
 loadYellow();
-
 </script>
 </body>
 </html>
